Add Identity, Jwt, CORS configuration #1

--- a/RBAC_API/appsettings.Development.json
+++ b/RBAC_API/appsettings.Development.json
@@ -7,5 +7,10 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5432;Database=staff_manager;Username=admin;Password=admin123"
+  },
+  "Jwt": {
+    "Key": "KeyForProjecttcejorProFyeKKeyForProjecttcejorProFyeK",
+    "Issuer": "IssuerForProjecttcejororFreussI",
+    "Audience": "AudienceForProjecttcejorPorFecneiduA"
   }
 }
