Add sign in API (In progress) #1

--- a/RBAC_API/appsettings.Development.json
+++ b/RBAC_API/appsettings.Development.json
@@ -9,8 +9,10 @@
     "DefaultConnection": "Host=localhost;Port=5432;Database=staff_manager;Username=admin;Password=admin123"
   },
   "Jwt": {
-    "Key": "KeyForProjecttcejorProFyeKKeyForProjecttcejorProFyeK",
-    "Issuer": "IssuerForProjecttcejororFreussI",
-    "Audience": "AudienceForProjecttcejorPorFecneiduA"
+    "Key": "my-super-secret-key-that-is-at-least-32-characters-long",
+    "Issuer": "RBAC_API",
+    "Audience": "RBAC_API_Users",
+    "AccessTokenExpirationMinutes": "60",
+    "RefreshTokenExpirationDays": "7"
   }
 }
