--- a/RBAC_API/Properties/launchSettings.json
+++ b/RBAC_API/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": false,
-      "applicationUrl": "https://localhost:7223;http://localhost:5196",
+      "applicationUrl": "https://localhost:7223",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
